Supporters | Update text and Click & Pledge

--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -17,7 +17,7 @@ import Image from '@components/Image.astro';
 		It’s that time of year again, GiveBIG 2022 is upon us! GiveBIG is a statewide movement of generosity where we come together as a region to invest in our community. 
 		Early giving has already begun and culminates on May 3rd and 4th with a huge blow-out 48-hour giving event! GIVE your tax-deductible donation here today,
 		and invest in the future of HONK! Fest West: 
-		<a href="www.wagives.org/organization/honk-fest-west/">www.wagives.org/organization/honk-fest-west/</a>
+		<a href="https://www.wagives.org/organization/honk-fest-west/">www.wagives.org/organization/honk-fest-west/</a>
 	</p>
 	<br/>
 	<p>
@@ -26,7 +26,7 @@ import Image from '@components/Image.astro';
 	So help us reach our goal and show some love for HONK! Fest West! 100% of your contribution goes toward the cost of putting on the festival, 
 	plus music education and programming throughout the year.
 	</p>
-	<a class="block font-base rounded antialiased text-main-color-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="www.wagives.org/organization/honk-fest-west/" >
+	<a class="block font-base rounded antialiased text-main-color-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="https://www.wagives.org/organization/honk-fest-west/" >
 		» GiveBIG & Thank You!
 	</a>
 </div>
