--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -7,14 +7,16 @@ import Image from '@components/Image.astro'
 import sponsors from '@data/sponsors.json'
 ---
 
-<BaseLayout title="Sponsors">
+<BaseLayout title="Supporters">
 	<!-- INTRO -->
 	<article class="content-container mb-4 sm:mb-6">
 		<p class="content">
 			<Markdown>
-				Strong support from business donors will be the key to our success. Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event.
+				Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event as well as outreach programming throughout the year. Financial support or in-kind contributions from businesses and community members are the backbone of our success.
+				<br/><br/>
+				For more information about sponsorship opportunities please contact us at:
 				<br/>
-				For more information or to discuss sponsorship levels, features, or benefits, please contact us at [info@honkfestwest.org](mailto:info@honkfestwest.org).
+				[fundraising@honkfestwest.org](mailto:fundraising@honkfestwest.org)
 			</Markdown>
 		</p>
 	</article>
@@ -34,13 +36,19 @@ import sponsors from '@data/sponsors.json'
 						Donations to HONK! Festival West are tax-deductible to the extent allowed by law. 
 						<br/><br/>
 						Donations can be made via check to:
-						<span class="flex flex-col block my-4 sm:my-5 font-bold">
+						<span class="flex flex-col block mt-2 font-bold">
 							HONK! Festival West
 							<br/>
 							PO Box 20242
 							<br/>
 							Seattle, WA 98102
 						</span>
+						<br/>
+						Or securely at:
+						<br/>
+						<a href="https://connect.clickandpledge.com/w/Form/a6086a7f-ef18-4eb8-a2bc-ffa205759fcc" class="block transition ease-in-out hover:bg-main-color-300 hover:bg-opacity-20 py-1 px-4 mt-2 text-center rounded-full border-4 border-main-color-300 border-opacity-80 hover:border-opacity-100 w-auto">
+							<span class="block text-lg content hover:text-white">Click & Pledge</span>
+						</a>
 					</Markdown>
 				</p>
 			</article>
@@ -48,10 +56,10 @@ import sponsors from '@data/sponsors.json'
 		<div class="w-full lg:w-2/3 flex flex-col gap-4 sm:gap-6">
 
 			<article class="content-container">
-				<Title title="Arts Support Organizations"/>
+				<Title title="Supporters"/>
 				<p class="content">
 					<Markdown>
-						HONK! Fest West is supported, in part, by grants from the Community Investments Fund of [Tides Foundation](http://www.tides.org/), [4Culture](http://www.4culture.org/), 
+						HONK! Festival West is supported by grants from the Community Investments Fund of [4Culture](http://www.4culture.org/), 
 						 [Arts Fund](https://www.artsfund.org/), the [Washington State Arts Commission](https://www.arts.wa.gov/), and the [National Endowment for the Arts](https://www.arts.gov/).
 					</Markdown>
 					<span class="block flex flex-wrap sm:flex-nowrap justify-around mt-2 sm:mb-5">
