--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,14 +17,6 @@ import family from '@data/honk-family.json'
 			</p>
 		</article>
 
-		<!-- VISION -->
-		<article class="content-container">
-			<Title title="Our" subtitle="Vision"/>
-			<p class="content">
-				Breaking down systemic barriers to inclusion for those underrepresented within our community and underserved by arts in our region. 
-			</p>
-		</article>
-
 		<!-- STORY -->
 		<article class="content-container">
 			<Title title="Our" subtitle="Story"/>
@@ -40,15 +32,28 @@ import family from '@data/honk-family.json'
 					/>
 				</div>
 				<p class="content">
-					HONK! Fest West is an independent 501(c)(3) arts organization that produces a free, three-day, community-supported music festival devoted to marching bands, drum corps, samba lines, and anything acoustic and mobile that makes a ruckus. This immersive festival occurs annually in June, and is 100% volunteer-run, performed, and organized. HONK! is part of a global renaissance of street band culture, with Seattle’s festival occurring since 2008. 
+					HONK! Festival West is an independent 501(c)(3) arts organization that produces an annual free, three-day, community-supported music festival in public spaces of the Seattle area. This immersive festival is driven by the energetic performances of street bands from around the world. HONK! is part of a global renaissance of street band culture, with Seattle’s festival occurring since 2008.
 
 				<br/><br/>
 
-					HONK! happens in the public spaces of the Seattle area. We are found in the streets and parks. We are found under bridges and on rooftops. We are found in parades marching down your street. We have called Georgetown our home since the festival’s inception, and have also celebrated in Columbia City, White Center, South Park, The Waterfront, Fremont/Gas Works Park, Capitol Hill, Central District, Pioneer Square, Downtown, Seattle Center, and West Seattle.
+					In 2021 HONK! Fest West transitioned to a federally recognized 501(c)(3) non-profit known as HONK Festival West. We are excited to usher in a new era of programming for our community, while continuing our iconic annual HONK! Fest West in June.
 
 				<br/><br/>
 
-					Most recently, we had a 1-day HONK! celebration in Columbia City in September 2021.  We are looking forward to being back in action in June 2022 for our traditional 3-day extravaganza! Planning has already begun, so stay tuned! 
+					HONK! is a celebration of community, collaboration and creative expression and is dedicated to creating a community of inclusion. We work to break down systemic barriers to inclusion for those underrepresented within our community, and increase community access to our programming by producing the festival in neighborhoods of the Seattle area underserved by the arts. Our interactive celebrations are designed to be accessible, with representation from a wide range of ages and abilities; offering pick-up bands throughout the festival open for anyone who would like to pick up an instrument and play. 
+				
+				<br/><br/>
+
+					Bands at HONK! Fest West travel from all over the country to temporarily transform streets in various neighborhoods with a free showcase of various musical styles.  The bands represent traditions ranging from New Orleans second line brass bands, punk rock marching bands, European Klezmer, Balkan and Romani music, Samba, Maracatu, as well as the passion and spirit of Mardi Gras and Carnival!
+
+				<br/><br/>
+
+					We have called Georgetown our home since the festival’s inception, and have also celebrated in Columbia City, White Center, South Park, The Waterfront, Fremont/Gas Works Park, Capitol Hill, Central District, Pioneer Square, Downtown, Seattle Center, and West Seattle. We will host our first Yesler Terrace neighborhood festival in 2022.
+
+				<br/><br/>
+
+				<b>Join us! June 3: Georgetown (6p – 10p), June 4: Columbia City (12p – 7p), and June 5: Yesler Terrace (12p – 6p).</b> We can’t wait to kick off Summer in Seattle with you in 2022. 
+
 				</p>
 			</div>
 		</article>
@@ -61,11 +66,14 @@ import family from '@data/honk-family.json'
 			</p>
 		</article>
 
-		<!-- Become a part of the Organizing Committee! -->
+		<!-- JOIN US! -->
 		<article class="content-container">
-			<Title title="Become a part of the" subtitle="Organizing Committee!"/>
+			<Title title="Join us!"/>
 			<p class="content">
-				We are a completely volunteer-run organization and festival and are currently recruiting to fill some key roles on our Committees. We have roles both big and small. If you are interested, head over to our Volunteers page to see some specific roles or just send an email to <a href="mailto:info@honkfestwest.org">info@honkfestwest.org</a> for more information. </p>
+				We are a completely volunteer-run organization and festival and are currently recruiting to fill some key roles on our various Committees. We have roles both big and small on 		
+				our <b>Event Production Committee</b>, our <b>Marketing, Outreach and Communication Committee</b>, and our <b>Fundraising Committee</b>. If you are interested, head over to our Volunteers page to see some specific roles or just send an email to 
+				<a href="mailto:volunteer@honkfestwest.org">volunteer@honkfestwest.org</a> for more information on how you can get involved. 
+			</p>
 		</article>
 
 		<!-- HONK! FAMILY -->
