Festival | New Festival page

--- a/src/layouts/FestivalLayout.astro
+++ b/src/layouts/FestivalLayout.astro
@@ -23,9 +23,8 @@ const isActive = (key) => key === active ? 'active' : ''
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<div class="menu">
-					<a class={isActive('schedule')} href="/festival#schedule">» Schedule</a>
-					<a class={isActive('map')} href="/festival/map#map">» Map</a>
-					<a class={isActive('covid')} href="/festival/covid#covid">» Covid Plan</a>
+					<a class={isActive('locations')} href="/festival#locations">» Locations</a>
+					<a class={isActive('bands')} href="/festival#bands">» Bands</a>
 				</div>
 			</div>
 		</div>
