--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,8 +51,8 @@ const postColumns = (index) => {
         <span class="text-main-color-300 text-center block font-emphasis" itemprop="location">
           SEATTLE, WA
         </span>
-        <a class="block font-base antialiased text-base sm:text-lg text-title-primary-color font-bold flex-none z-10 mt-5" href="#">
-          » More Info (coming soon)
+        <a class="block font-base antialiased text-base sm:text-lg text-title-primary-color font-bold flex-none z-10 mt-5" href="/festival">
+          » More Info 
         </a>
       </div>
     </section>
