--- a/src/layouts/FestivalLayout.astro
+++ b/src/layouts/FestivalLayout.astro
@@ -3,6 +3,7 @@ import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 import Image from '@components/Image.astro'
+import FestivalVolunteer from '@components/FestivalVolunteer.astro'
 
 const {title, active} = Astro.props
 
@@ -20,13 +21,14 @@ const isActive = (key) => key === active ? 'active' : ''
 
 <BaseLayout title={title}>
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
-		<div class="w-full md:w-1/3">
-			<div class="content-container">
+		<div class="w-full md:w-1/3 flex flex-col gap-4">
+			<!-- <div class="content-container">
 				<div class="menu">
 					<a class={isActive('locations')} href="/festival#locations">» Locations</a>
 					<a class={isActive('bands')} href="/festival#bands">» Bands</a>
 				</div>
-			</div>
+			</div> -->
+			<FestivalVolunteer/>
 		</div>
 		<div class="w-full md:w-2/3">
 			<slot/>
