--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -12,25 +12,24 @@
 
 <FestivalLayout title="Schedule" active="schedule">
 	<div id="locations" class="content-container mb-4 sm:mb-6">
-		<Title title="2022 Festival Locations" />
+		<Title title="Locations" />
 		<div class="content divide-y-4 divide-main-color-600 divide-dotted grid grid-cols-1">
-				<p class="py-3">
-					<span class="font-bold text-lg block">Thursday, June 2nd, 8pm</span>
-					<span>Opening night at <a href="https://goo.gl/maps/KfYuxjmM6zDBRXoo9">Ballard Odd Fellows</a></span>				
-				</p>
-				<p class="py-3">
-					<span class="font-bold text-lg block">Friday, June 3rd, 6pm-10pm</span>
-					<a href="https://goo.gl/maps/Fe2k87KPDpzyEapG7">Georgetown neighborhood</a>			
-				</p>
-				<p class="py-3">
-					<span class="font-bold text-lg block">Saturday, June 4th, 12pm-7pm</span>
-					<a href="https://goo.gl/maps/KfYuxjmM6zDBRXoo9">Columbia Park, Columbia City</a>			
-				</p>
-				<p class="py-3">
-					<span class="font-bold text-lg block">Sunday, June 5th, 12pm-6pm</span>
-					<a href="https://goo.gl/maps/e57QBXWWsQQ1LnwB6">Yesler Terrace Park</a>				
-				</p>
-
+			<p class="py-3">
+				<span class="font-bold text-lg block">Thursday, June 2nd, 8pm</span>
+				<span>Opening night at <a href="https://goo.gl/maps/KfYuxjmM6zDBRXoo9">Ballard Odd Fellows</a></span>				
+			</p>
+			<p class="py-3">
+				<span class="font-bold text-lg block">Friday, June 3rd, 6pm-10pm</span>
+				<a href="https://goo.gl/maps/Fe2k87KPDpzyEapG7">Georgetown neighborhood</a>			
+			</p>
+			<p class="py-3">
+				<span class="font-bold text-lg block">Saturday, June 4th, 12pm-7pm</span>
+				<a href="https://goo.gl/maps/KfYuxjmM6zDBRXoo9">Columbia Park, Columbia City</a>			
+			</p>
+			<p class="py-3">
+				<span class="font-bold text-lg block">Sunday, June 5th, 12pm-6pm</span>
+				<a href="https://goo.gl/maps/e57QBXWWsQQ1LnwB6">Yesler Terrace Park</a>				
+			</p>
 		</div>
 	</div>
 	<div id="bands" class="content-container mb-4 sm:mb-6">
