--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -3,7 +3,9 @@ import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 
+
 import volunteer_data from '@data/volunteer.json'
+import FestivalVolunteer from '../../components/FestivalVolunteer.astro'
 
 const positions = volunteer_data.positions
 ---
@@ -11,17 +13,7 @@ const positions = volunteer_data.positions
 <BaseLayout title="Volunteer">
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
 		<div class="w-full md:w-1/3 grid grid-cols-1 gap-6 h-fit">
-			<div class="content-container">
-				<Title title="Event Volunteer" center={true} />
-				<p class="content">
-					We need all the help we can get. Please sign up below and join an amazing group of people that help run HONK! Fest West every year.
-				</p>
-				<a 
-					href="https://volunteer-hfw.netlify.app"
-					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
-					» SIGN UP HERE
-				</a>
-			</div>
+			<FestivalVolunteer/>
 			<div class="content-container">
 				<Title title="Provide Housing" center={true} />
 				<p class="content">
@@ -32,7 +24,7 @@ const positions = volunteer_data.positions
 					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
 					» SIGN UP HERE
 				</a>
-			</div>
+			</div>	
 		</div>
 		<div class="w-full md:w-2/3 flex flex-col gap-4 sm:gap-6">
 			<div class="content-container">
