Donate | Add Click & Pledge

--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -11,13 +11,11 @@ import sponsors from '@data/sponsors.json'
 	<!-- INTRO -->
 	<article class="content-container mb-4 sm:mb-6">
 		<p class="content">
-			<Markdown>
-				Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event as well as outreach programming throughout the year. Financial support or in-kind contributions from businesses and community members are the backbone of our success.
-				<br/><br/>
-				For more information about sponsorship opportunities please contact us at:
-				<br/>
-				[fundraising@honkfestwest.org](mailto:fundraising@honkfestwest.org)
-			</Markdown>
+			Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event as well as outreach programming throughout the year. Financial support or in-kind contributions from businesses and community members are the backbone of our success.
+			<br/><br/>
+			For more information about sponsorship opportunities please contact us at:
+			<br/>
+			<a href="mailto:fundraising@honkfestwest.org" >fundraising@honkfestwest.org</a>
 		</p>
 	</article>
 
