--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -1,5 +1,4 @@
 ---
-import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 import Image from '@components/Image.astro'
@@ -11,8 +10,8 @@ import sponsors from '@data/sponsors.json'
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
-				<div class="flex flex-col items-center">
-					<a href="https://venmo.com/honkfestwest" class="flex md:hidden items-center mb-8 py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80">
+				<div class="flex flex-col items-center gap-y-5 my-2">
+					<a href="https://venmo.com/honkfestwest" class="flex md:hidden items-center mb-1 py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80">
 						<img 
 							src="https://cdn1.venmo.com/marketing/images/branding/venmo-icon.svg"
 							alt=""
@@ -21,8 +20,18 @@ import sponsors from '@data/sponsors.json'
 							class="w-6 mr-2">
 						<span class="block text-lg content">Donate with Venmo</span>
 					</a>
-					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80">
+					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80 transition ease-in-out hover:bg-main-color-300 hover:bg-opacity-20 hover:border-opacity-100">
 						<i class="paypal mr-2"></i> <span class="block text-lg content">Donate with PayPal</span>
+					</a>
+					<p class="content text-center text-sm">
+						Or securely at:
+					</p>
+					<a href="https://connect.clickandpledge.com/w/Form/a6086a7f-ef18-4eb8-a2bc-ffa205759fcc" class="flex items-center py-3 px-5 rounded-full border-4 border-main-color-300 border-opacity-80 transition ease-in-out hover:bg-main-color-300 hover:bg-opacity-20 hover:border-opacity-100">
+						<p class="block content font-black bg-main-color-300 rounded-full px-3 bg-opacity-50">
+							<span class="text-[#0f324d] text-2xl ">CLICK</span>
+							<span class="text-[#ff7333] text-2xl -rotate-45 inline-block">&</span>
+							<span class="text-[#0f324d] text-2xl ">PLEDGE</span>
+						</p>
 					</a>
 				</div>
 
@@ -31,20 +40,20 @@ import sponsors from '@data/sponsors.json'
 		<div class="w-full md:w-2/3">
 			<div class="content-container">
 				<div class="content">
-					<Markdown>
-						Your contributions help make this event possible. Through the generous efforts of our shared community, we’ll keep bringing music to the streets and parks of Seattle’s neighborhoods.
-						<br/><br/>
-						HONK! Festival West is a 501(c)(3) nonprofit organization. <span class="font-bold">Tax ID #86-3761255</span>. Donations to HONK! Fest West are tax-deductible to the extent allowed by law. Donations can be made via check to:
+					Your contributions help make this event possible. Through the generous efforts of our shared community, we’ll keep bringing music to the streets and parks of Seattle’s neighborhoods.
+					<br/><br/>
+					HONK! Festival West is a 501(c)(3) nonprofit organization. <span class="font-bold">Tax ID #86-3761255</span>. Donations to HONK! Fest West are tax-deductible to the extent allowed by law. Donations can be made via check to:
+					<br/>
+					<span class="flex flex-col block my-4 sm:my-5 font-bold">
+						HONK! Festival West
 						<br/>
-						<span class="flex flex-col block my-4 sm:my-5 font-bold">
-							HONK! Festival West
-							<br/>
-							PO Box 20242
-							<br/>
-							Seattle, WA 98102
-						</span>
-						Please get in touch with us at [info@honkfestwest.org](mailto:info@honkfestwest.org) if you’d like another option, or would like to arrange donations of goods or services. Thanks so much, and we hope to see you at HONK! Fest West.
-					</Markdown>
+						PO Box 20242
+						<br/>
+						Seattle, WA 98102
+					</span>
+					Please get in touch with us at
+					<a href="mailto:info@honkfestwest.org">info@honkfestwest.org</a>
+					if you’d like another option, or would like to arrange donations of goods or services. Thanks so much, and we hope to see you at HONK! Fest West.
 				</div>
 			</div>
 		</div>
