--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -119,7 +119,7 @@ import committee from '@data/committee.json'
 				</h2>
 				<div class="flex flex-wrap justify-around gap-6">
 					{committee.photos.map((member) => (
-						<div class="w-[184px] flex flex-col items-center">
+						<div class="flex flex-col items-center">
 							<Image 
 								className="rounded-full h-32 w-auto   mb-2 border-[.5rem] border-main-color-900" 
 								src={member.image_url} alt={member.name}
@@ -132,6 +132,7 @@ import committee from '@data/committee.json'
 				</div>
 			</section>
 
+			<!-- COMMITTEE ROLES -->
 			<section class="content-container grid grid-cols-1 md:grid-cols-4 ">
 				<div class="content">
 					<h3 class="text-lg text-title-primary-color font-semibold">Board of Directors</h3>
