--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -178,10 +178,10 @@ import committee from '@data/committee.json'
 						<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-7 w-full content my-4 sm:my-5">
 							{family[continent].map((honk) => (
 								<a class="font-bold block w-full flex flex-col text-center items-center" href={honk.url}>
-									<div class="block border-main-color-300 border-opacity-70 border-4 rounded w-80 relative top-4 text-2xl">
-										<span class="inline-block relative bottom-4 bg-[#006662] px-2">{honk.name}</span>
+									<div class="block border-main-color-300 border-opacity-70 border-4 rounded-xl w-80 relative top-4 text-2xl transition ease-in-out hover:bg-main-color-300 hover:bg-opacity-20 hover:border-opacity-100">
+										<span class="inline-block relative bottom-4 bg-[#006662] px-2 rounded-xl bg-opacity-90">{honk.name}</span>
 									</div>
-									<span class="block bg-[#006662] px-2 z-10 text-main-color-300">{honk.location}</span>	
+									<span class="block bg-[#006662] px-2 z-10 text-main-color-300 rounded-xl bg-opacity-90">{honk.location}</span>	
 								</a>
 							))}
 						</div>
