--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,7 +40,7 @@ const golden_dino = true;
 </div>
 
 <!-- BOTTOM -->
-<div class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center bg-main-color bg-opacity-40">
+<div class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center ">
   <a class="w-full text-center text-main-color-900 text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4" href="/"
     >© 2022 HONK! Fest West</a
   >
