BackToTop | scrolls the page back to the top

--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 import Image from '@components/Image.astro'
+import BackToTop from '@components/BackToTop.astro'
 
 import sponsors from '@data/sponsors.json'
 ---
@@ -39,6 +40,7 @@ import sponsors from '@data/sponsors.json'
 		</div>
 		<div class="w-full md:w-2/3">
 			<div class="content-container">
+				<BackToTop />
 				<div class="content">
 					Your contributions help make this event possible. Through the generous efforts of our shared community, we’ll keep bringing music to the streets and parks of Seattle’s neighborhoods.
 					<br/><br/>
