--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -52,7 +52,7 @@ const golden_dino = true;
     ))}
   </ul>
   <GoldenDino client:visible />
-  <a class="w-full text-center font-base link text-accent-color font-bold text-lg block w-full sm:w-1/3 m-1 sm:m-4" href="#">
+  <a class="w-full text-center font-base link text-accent-color font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline" href="#">
     Back to top
   </a>
 </div>
