--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 import Image from '@components/Image.astro'
+import BackToTop from '@components/BackToTop.astro'
 
 import family from '@data/honk-family.json'
 import emails from '@data/email-addresses.json' 
@@ -25,6 +26,7 @@ import committee from '@data/committee.json'
 
 		<!-- MISSION -->
 		<section id="mission" class="content-container md:col-span-2">
+			<BackToTop />
 			<Title title="Our" subtitle="Mission"/>
 			<p class="content">
 				HONK! Fest West is dedicated to the activation of public space through energetic musical performance. 
@@ -33,6 +35,7 @@ import committee from '@data/committee.json'
 
 		<!-- Contact -->
 		<section id="contact" class="content-container md:col-span-2">
+			<BackToTop />
 			<Title title="Contact Us"/>
 			<dl class="grid grid-cols-1 md:grid-cols-3">
 				{Object.keys(emails).map((email) => (
@@ -53,8 +56,9 @@ import committee from '@data/committee.json'
 		<div class="grid grid-cols-1 gap-5">
 			<!-- STORY -->
 			<section id="story" class="content-container">
+				<BackToTop />
 				<Title title="Our" subtitle="Story"/>
-				<div class="flex w-full flex-wrap md:flex-nowrap">
+				<div class="flex flex-col md:flex-row w-full gap-2">
 					<div>
 						<Image 
 							className="block w-full md:w-auto md:mr-5 mb-3 sm:mb-0 rounded h-auto" 
@@ -94,6 +98,7 @@ import committee from '@data/committee.json'
 
 			<!-- DIVERSITY -->
 			<section id="diversity" class="content-container">
+				<BackToTop />
 				<Title title="Diversity &" subtitle="Inclusion"/>
 				<p class="content">
 					HONK! Fest West activates public space to make communities stronger and more connected. The raucously engaging performances provide the universal benefits of celebrating music together with no limitations arising from age, race, gender identity, cultural background, ethnic and indigenous identity, native language, immigration status, ability, religion, education, socioeconomic status, or sexual orientation. HONK! Fest West focuses on cooperative values; participatory culture; breaking down barriers to music and art; introduction to different cultural traditions through music; and the key tenet that anyone can be a part of the experience. 
@@ -102,6 +107,7 @@ import committee from '@data/committee.json'
 
 			<!-- JOIN US! -->
 			<section id="join" class="content-container">
+				<BackToTop />
 				<Title title="Join Us!"/>
 				<p class="content">
 					We are a completely volunteer-run organization and festival and are currently recruiting to fill some key roles on our various Committees. We have roles both big and small on 		
@@ -134,6 +140,7 @@ import committee from '@data/committee.json'
 
 			<!-- COMMITTEE ROLES -->
 			<section class="content-container grid grid-cols-1 md:grid-cols-4 ">
+				<BackToTop />
 				<div class="content">
 					<h3 class="text-lg text-title-primary-color font-semibold">Board of Directors</h3>
 					<ul>
@@ -180,6 +187,7 @@ import committee from '@data/committee.json'
 			<div id="family" class="grid grid-cols-1 gap-5">
 				{Object.keys(family).map((continent) => (
 					<section class="content-container">
+						<BackToTop />
 						<Title title={`HONK! Family - ${continent}`} center={true} />
 						<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-7 w-full content my-4 sm:my-5">
 							{family[continent].map((honk) => (
