--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import NewsletterForm from '@components/NewsletterForm.astro'
 import Slideshow from '../components/slideshow/Slideshow.jsx'
 import GiveBig from '@components/home/GiveBig.astro'
 import BonfireMerch from '@components/home/BonfireMerch.astro'
+import BackToTop from '@components/BackToTop.astro'
 import slides from '@data/slideshow.json'
 import volunteer_data from '@data/volunteer.json'
 
@@ -74,10 +75,12 @@ const postColumns = (index) => {
 
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
+      <BackToTop />
       <GiveBig />
     </article>
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
+      <BackToTop />
       <BonfireMerch />
     </article>
 
@@ -121,6 +124,7 @@ const postColumns = (index) => {
 
     <!-- SUPPORT DUAMISH  -->
     <div class="col-span-6 content-container">
+      <BackToTop />
       <p class="content font-base italic">
         H!FW acknowledges that we are on the traditional land of the first people of Seattle
         — the Duwamish People past and present — and honor with gratitude the land itself,
