--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -3,6 +3,7 @@ import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '@components/Title.astro'
 import Image from '@components/Image.astro'
+import BackToTop from '@components/BackToTop.astro'
 
 import sponsors from '@data/sponsors.json'
 ---
@@ -53,6 +54,7 @@ import sponsors from '@data/sponsors.json'
 		</div>
 		<div class="w-full lg:w-2/3 flex flex-col gap-4 sm:gap-6">
 			<article class="content-container">
+				<BackToTop />
 				<Title title="Supporters"/>
 				<p class="content">
 					<Markdown>
