--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -10,7 +10,7 @@ import sponsors from '@data/sponsors.json'
 
 <BaseLayout title="Supporters">
 	<!-- INTRO -->
-	<article class="content-container mb-4 sm:mb-6">
+	<section class="content-container mb-4 sm:mb-6">
 		<p class="content">
 			Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event as well as outreach programming throughout the year. Financial support or in-kind contributions from businesses and community members are the backbone of our success.
 			<br/><br/>
@@ -18,13 +18,13 @@ import sponsors from '@data/sponsors.json'
 			<br/>
 			<a href="mailto:fundraising@honkfestwest.org" >fundraising@honkfestwest.org</a>
 		</p>
-	</article>
+	</section>
 
 	<div class="flex flex-wrap lg:flex-nowrap gap-4 sm:gap-6">
 		<div class="w-full lg:w-1/3 flex flex-col gap-4 sm:gap-6">
 
 			<!-- READY TO PARTICIPATE? -->
-			<article class="content-container">
+			<section class="content-container">
 				<Title title="Ready to Participate?"/>
 				<p class="content">
 					<Markdown>
@@ -50,10 +50,10 @@ import sponsors from '@data/sponsors.json'
 						</a>
 					</Markdown>
 				</p>
-			</article>
+			</section>
 		</div>
 		<div class="w-full lg:w-2/3 flex flex-col gap-4 sm:gap-6">
-			<article class="content-container">
+			<section class="content-container">
 				<BackToTop />
 				<Title title="Supporters"/>
 				<p class="content">
@@ -118,7 +118,7 @@ import sponsors from '@data/sponsors.json'
 						We thank the original [HONK! festival](http://honkfest.org/)—the mothership—which inspired our festival and has since seen other offspring arise in Austin, Detroit, Australia, Brazil and beyond!
 					</Markdown>
 				</p>
-			</article>
+			</section>
 		</div>
 	</div>
 </BaseLayout>
