--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,9 @@ import Image from '@components/Image.astro'
 import Title from '@components/Title.astro'
 import NewsletterForm from '@components/NewsletterForm.astro'
 import Slideshow from '../components/slideshow/Slideshow.jsx'
-import GiveBig from '@components/home/GiveBig.astro'
-import BonfireMerch from '@components/home/BonfireMerch.astro'
+import HonkanoThursday from '@components/home/HonkanoThursday.astro'
 import BackToTop from '@components/BackToTop.astro'
 import slides from '@data/slideshow.json'
-import volunteer_data from '@data/volunteer.json'
 
 let posts = [];
 
@@ -76,13 +74,10 @@ const postColumns = (index) => {
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
       <BackToTop />
-      <GiveBig />
+      <HonkanoThursday />
     </article>
 
-    <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
-      <BackToTop />
-      <BonfireMerch />
-    </article>
+
 
     <!-- POST BLURBS -->
     {posts.map((post, index) => (
