Home | Update Honkano event

--- a/src/components/home/HonkanoThursday.astro
+++ b/src/components/home/HonkanoThursday.astro
@@ -5,8 +5,11 @@ import Image from '@components/Image.astro';
 
 <div class="flex-none md:pr-6 mb-3 md:mb-0 z-10">
 	<Image
-		src="https://ik.imagekit.io/thegoldendino/hfw/2022/honkano-v4_yTvN2doPw.png?ik-sdk-version=javascript-1.4.3&updatedAt=1652418210532&tr=w-230"
+		src="https://ik.imagekit.io/thegoldendino/hfw/2022/honkano-v4_yTvN2doPw.png?ik-sdk-version=javascript-1.4.3&updatedAt=1652418210532"
 		alt="OH NO! HONKANO - a marching band forming a pyramid while skiing on a wave with a volcano in the background"
+		width="260"
+		height="402"
+
 
 		className="h-auto  mx-auto"
 	/>
@@ -28,8 +31,6 @@ import Image from '@components/Image.astro';
 			Where: <a href="https://goo.gl/maps/NhJDxAJELsbANxF56">Ballard Odd Fellows</a>
 			<br/>
 			<a href="https://www.facebook.com/events/9LXSCemmJ/">Facebook Event</a>
-
-			<p>$10</p>
 		</p>
 
 </div>
