--- a/src/components/home/HonkanoThursday.astro
+++ b/src/components/home/HonkanoThursday.astro
@@ -30,7 +30,7 @@ import Image from '@components/Image.astro';
 			<br/>
 			Where: <a href="https://goo.gl/maps/NhJDxAJELsbANxF56">Ballard Odd Fellows</a>
 			<br/>
-			<a href="https://www.facebook.com/events/9LXSCemmJ/">Facebook Event</a>
+			<a href="https://fb.me/e/1Uo9pDz4E">Facebook Event</a>
 		</p>
 
 </div>
