--- a/src/layouts/FestivalLayout.astro
+++ b/src/layouts/FestivalLayout.astro
@@ -22,13 +22,15 @@ const isActive = (key) => key === active ? 'active' : ''
 <BaseLayout title={title}>
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
 		<div class="w-full md:w-1/3 flex flex-col gap-4">
-			<!-- <div class="content-container">
-				<div class="menu">
-					<a class={isActive('locations')} href="/festival#locations">» Locations</a>
-					<a class={isActive('bands')} href="/festival#bands">» Bands</a>
+			<nav class="content-container">
+				<div class="menu sticky">
+					<a class="button" href="#locations">» Locations</a>
+					<a class="button" href="#friday">» Friday Schedule</a>
+					<a class="button" href="#saturday">» Saturday Schedule</a>
+					<a class="button" href="#sunday">» Sunday Schedule</a>
+					<a class="button" href="#bands">» Bands</a>
 				</div>
-			</div> -->
-			<FestivalVolunteer/>
+			</nav>
 		</div>
 		<div class="w-full md:w-2/3">
 			<slot/>
