Festival | update navigation

--- a/src/layouts/FestivalLayout.astro
+++ b/src/layouts/FestivalLayout.astro
@@ -25,9 +25,9 @@ const isActive = (key) => key === active ? 'active' : ''
 			<nav class="content-container">
 				<div class="menu sticky">
 					<a class="button" href="#locations">» Locations</a>
-					<a class="button" href="#friday">» Friday Schedule</a>
-					<a class="button" href="#saturday">» Saturday Schedule</a>
-					<a class="button" href="#sunday">» Sunday Schedule</a>
+					<a class="button" href="#friday">» Friday</a>
+					<a class="button" href="#saturday">» Saturday</a>
+					<a class="button" href="#sunday">» Sunday</a>
 					<a class="button" href="#bands">» Bands</a>
 				</div>
 			</nav>
