--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ const { title } = Astro.props;
   </head>
 
   <body class="min-h-full">
+    <div id="back-to-top"></div>
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
