Festival | Navigation volcano

--- a/src/layouts/FestivalLayout.astro
+++ b/src/layouts/FestivalLayout.astro
@@ -25,9 +25,9 @@ const isActive = (key) => key === active ? 'active' : ''
 			<nav class="content-container">
 				<div class="menu sticky">
 					<a class="button" href="#locations">» Locations</a>
-					<a class="button" href="#friday">» Friday</a>
-					<a class="button" href="#saturday">» Saturday</a>
-					<a class="button" href="#sunday">» Sunday</a>
+					<a class="button" href="#friday">» <span class="w-24 inline-block">Friday</span><span class="w-28 inline-block text-center">((6|3))</span></a>
+					<a class="button" href="#saturday">» <span class="w-24 inline-block">Saturday</span><span class="w-28 inline-block text-center">&nbsp;/6|4\</span></a>
+					<a class="button" href="#sunday">» <span class="w-24 inline-block">Sunday</span><span class=" w-28 inline-block text-center">---6|5---</span></a>
 					<a class="button" href="#bands">» Bands</a>
 				</div>
 			</nav>
