Supporters | update styling

--- a/src/pages/supporters.astro
+++ b/src/pages/supporters.astro
@@ -103,7 +103,7 @@ import sponsors from '@data/sponsors.json'
 
 					<div class="relative flex flex-col justify-center py-6">
   <div
-    class="columns-2 2xl:columns-3 gap-10 [column-fill:_balance] box-border mx-auto before:box-inherit after:box-inherit">
+    class="columns-2 sm:columns-3 gap-10 [column-fill:_balance] box-border mx-auto before:box-inherit after:box-inherit">
     
 			{sponsors.shoutouts.map((sponsor) => (
 				<div class="break-inside-avoid mb-6 rounded-lg">
