Festival | Remove volcano from navigation

--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -38,17 +38,17 @@
 	</div>
 	<div id="friday" class="content-container mb-4 sm:mb-6">
 		<BackToTop />
-		<Title title="Friday ((6|3))" />
+		<Title title="Friday 6/3" />
 		<ScheduleTable day={schedule.friday} {bands} />
 	</div>
 	<div id="saturday" class="content-container mb-4 sm:mb-6">
 		<BackToTop />
-		<Title title="Saturday /6|4\\" />
+		<Title title="Saturday 6/4" />
 		<ScheduleTable day={schedule.saturday} {bands} />
 	</div>
 	<div id="sunday" class="content-container mb-4 sm:mb-6">
 		<BackToTop />
-		<Title title="Sunday ---6|5---" />
+		<Title title="Sunday 6/5" />
 		<ScheduleTable day={schedule.sunday} {bands} />
 	</div>
 	<div id="bands" class="content-container mb-4 sm:mb-6">
