Home | add bonfire merch

--- a/src/components/home/BonfireMerch.astro
+++ b/src/components/home/BonfireMerch.astro
@@ -33,20 +33,19 @@ import Image from '@components/Image.astro';
 	<Title
 		title="The 2022 Merch" subtitle="Shop is Open"/>
 		<p>
-	This year, for our 14th annual festival, we could use your help in bringing back FREE music to the streets and parks of Seattle! Buy your t-shirt, hoodie, kids shirt, or tank today and wear it to the festival!
+	This year, for our 14th annual festival, we could use your help in bringing back FREE music to the streets and parks of Seattle! Buy your t-shirt, hoodie, kids shirt, or tank today.
 	</p>
 		<br/>
 	<p>
-		These offerings are outside of the scope of our traditional festival merch (WHAT!? Is that a HOODIE?!) so grab yours today! And wear it to HONK! Fest West on June 3rd through 5th. The year of the Golden Dino is upon us!
-
+		These offerings are outside of the scope of our traditional festival merch (WHAT!? Is that a HOODIE?!) so grab yours today! The year of the Golden Dino is upon us!
 	</p>
 	<br/>
 	<p >
-	Orders will start shipping May 17th.
+	
 	</p>
 
 
-	<a class="block font-base rounded antialiased text-main-color-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="https://www.bonfire.com/honk-fest-west/" >
+	<a class="block font-base rounded antialiased text-main-color-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href="https://www.bonfire.com/honk-fest-west-1/" >
 		» Online Internet Storefront
 	</a>
 </div>
