--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Image from '@components/Image.astro'
 import Title from '@components/Title.astro'
 import NewsletterForm from '@components/NewsletterForm.astro'
 import Slideshow from '../components/slideshow/Slideshow.jsx'
-import HonkanoThursday from '@components/home/HonkanoThursday.astro'
+import BonfireMerch from '@components/home/BonfireMerch.astro'
 import BackToTop from '@components/BackToTop.astro'
 import slides from '@data/slideshow.json'
 
@@ -74,7 +74,7 @@ const postColumns = (index) => {
 
     <article class="w-full content-container col-span-6 flex flex-col md:flex-row">
       <BackToTop />
-      <HonkanoThursday />
+      <BonfireMerch />
     </article>
 
 
